--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -46,7 +46,31 @@
         android:padding="10dp" />
 
     <LinearLayout
-        android:layout_marginTop="100dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:gravity="center">
+
+        <ImageView
+            android:id="@+id/ivUmbrella"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:padding="10dp"/>
+
+        <TextView
+            android:id="@+id/tvUmbrella"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="우산 챙기세요!"
+            android:textSize="20dp"
+            android:textColor="#ff0000"/>
+
+    </LinearLayout>
+
+
+
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
